feat : add redis and file upload
