# internal/router/routes.go
@@ -8,9 +8,11 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5/pgxpool"
+	"github.com/redis/go-redis/v9"
 )
 
-func InitRouter(app *gin.Engine, db *pgxpool.Pool) {
+func InitRouter(app *gin.Engine, db *pgxpool.Pool, rdb *redis.Client) {
+	app.Static("/uploads", "./public/uploads")
 	// ── Repository ──
 	userRepo := repository.NewUserRepository(db)
 	tokenRepo := repository.NewTokenRepository(db)
@@ -18,8 +20,8 @@ func InitRouter(app *gin.Engine, db *pgxpool.Pool) {
 
 	// ── Service ──
 	authService := service.NewAuthService(userRepo, tokenRepo)
-	userService := service.NewUserService(userRepo)
-	walletService := service.NewWalletService(walletRepo)
+	userService := service.NewUserService(userRepo, rdb)
+	walletService := service.NewWalletService(walletRepo, rdb)
 
 	// ── Controller ──
 	authCtrl := controller.NewAuthController(authService)
@@ -42,5 +44,8 @@ func InitRouter(app *gin.Engine, db *pgxpool.Pool) {
 	protected.GET("/users/profile", userCtrl.GetProfile)
 	protected.GET("/users/dashboard", walletCtrl.GetDashboardInfo)
 	protected.GET("/users/receiver", userCtrl.FindReceivers)
+	protected.PATCH("/users/profile", userCtrl.UpdateProfile)
+	protected.PATCH("/users/password", userCtrl.UpdatePassword)
+	protected.PATCH("/users/pin", userCtrl.UpdatePin)
 	protected.POST("/users/pin/check", userCtrl.CheckPin)
 }
